# rendrift

./: .gitignore  FIX_ERRORS.md  IMPLEMENTATION_TODO.md  MODEL_CONFIGURATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  TESTING_GUIDE.md  check-job.js  diag_err.py  diagnose.js  full_err.txt  start-all.bat  test-backend.js  test-final-render.js  test-render-debug.js  test-setup.js  test_or.py  test_or_res.txt  test_or_tools.py  update_project.md
apps/processor/: filter.txt  index.js  package-lock.json  package.json  test-3d-render.js  test-ai.js  test-render-engine.js
apps/processor/agent/: main.py  pyproject.toml  requirements.txt
apps/processor/agent/lib/: db.py  frames.py  schema.py  tokens.py
apps/processor/agent/pipeline/: orchestrator.py  tools.py
apps/processor/db/: err.txt  focuscast.db-shm  focuscast.db-wal  focuscast.db.backup.1773092009504  init.js  migrate.js
apps/processor/lib/: ai.js  auth.js  ffmpeg.js  middleware.js
apps/processor/renderer/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
apps/processor/renderer/src/: Composition.tsx  index.tsx
apps/processor/routes/: ai.js  auth.js  files.js  jobs.js  render.js
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/components/: JobStatusPoller.tsx  LivePreview.tsx  SettingsPanel.tsx  Timeline.tsx  VideoUploader.tsx
apps/web/src/lib/: api.ts
apps/web/src/types/: index.ts
(+2 files in other folders)
